--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
   "scripts": {
-    "serve": "cross-env NODE_ENV=development concurrently \"postcss public/tailwind.css -o public/build/tailwind.css --watch\"  \"live-server ./public\"",
-    "development": "cross-env NODE_ENV=development postcss public/tailwind.css -o public/build/tailwind.css",
-    "production": "cross-env NODE_ENV=production postcss public/tailwind.css -o public/build/tailwind.css",
-    "start": "npm run serve"
+    "fonts": "get-google-fonts --overwriting --useragent 'Mozilla/5.0 (Windows NT 10.0; WOW64; Trident/7.0; rv:11.0) like Gecko' --output assets --input 'https://fonts.googleapis.com/css?family=Kanit:300,900'",
+    "sync": "browser-sync start --server --files \"**/*\"",
+    "dev": "postcss assets/style.tailwind.css --output assets/style.css",
+    "watch:dev": "npm run dev -w",
+    "prod": "NODE_ENV=production npm run dev",
+    "watch": "run-p watch:dev sync"
   },
   "dependencies": {
-    "autoprefixer": "^9.8.6",
-    "tailwindcss": "^1.7.2"
+    "autoprefixer": "^10.0.4",
+    "cssnano": "^4.1.10",
+    "npm-run-all": "^4.1.5",
+    "postcss-cli": "^8.3.0",
+    "postcss-import": "^13.0.0",
+    "tailwindcss": "^2.0.1"
   },
   "devDependencies": {
-    "concurrently": "^5.3.0",
-    "cross-env": "^7.0.2",
-    "cssnano": "^4.1.10",
-    "live-server": "^1.2.1",
-    "postcss-cli": "^7.1.1"
+    "browser-sync": "^2.26.7",
+    "get-google-fonts": "^1.2.2"
   }
 }
